--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
@@ -29,6 +30,34 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="上锁"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/tv_down_correct"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="下到位"
+        android:textSize="18sp"/>
+
+
+    <TextView
+        android:id="@+id/tv_up_correct"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="上到位"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/tv_close_connect"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="断开连接"
         android:textSize="18sp"/>
 
 </LinearLayout>
