--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,36 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- 自定义loading dialog -->
+    <style name="loadingDialogStyle" parent="android:Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item><!-- 背景透明 -->
+        <item name="android:windowFrame">@null</item><!-- 边框 -->
+        <item name="android:windowNoTitle">true</item><!-- 无标题 -->
+        <item name="android:windowIsFloating">true</item><!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsTranslucent">true</item><!-- 半透明 -->
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:backgroundDimEnabled">true</item><!-- 模糊，默认为true -->
+        <item name="android:backgroundDimAmount">0.5</item><!-- 后背景的暗淡度 -->
+    </style>
+
+    <style name="def_progress_style">
+        <item name="outer_layer_slide_color">#FFFFFF</item>
+        <item name="outer_layer_stroke_color">#90F76E6B</item>
+        <item name="outer_layer_stroke_width">2dp</item>
+        <item name="middle_layer_bg_color">#D1D1D1</item>
+        <item name="middle_layer_progress_color">#F76E6B</item>
+        <item name="middle_layer_progress_width">4dp</item>
+        <item name="middle_layer_small_circle_slide_color">#FFFFFF</item>
+        <item name="middle_layer_small_circle_stroke_color">#F76E6B</item>
+        <item name="middle_layer_small_circle_size">9dp</item>
+        <item name="middle_layer_small_circle_stroke_width">4dp</item>
+        <item name="shadow_layer_color">#90F76E6B</item>
+        <item name="shadow_layer_inner_color">#FFFFFF</item>
+        <item name="inner_text_size">48sp</item>
+        <item name="inner_text_color">#F76E6B</item>
+    </style>
 </resources>
