--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv_car_port"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="40dp"
+        android:background="@drawable/button_bg_click_selector"
+        android:gravity="center"
+        android:text="请选择车位连接"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tv_ble_conn"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/tv_car_port"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_bg_click_selector"
         android:gravity="center"
         android:text="连接蓝牙"
-        android:textSize="18sp"/>
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_unlock"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/tv_ble_conn"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_bg_click_selector"
         android:gravity="center"
         android:text="开锁"
-        android:textSize="18sp"/>
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_lock"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/tv_unlock"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_bg_click_selector"
         android:gravity="center"
         android:text="上锁"
-        android:textSize="18sp"/>
-
-    <TextView
-        android:id="@+id/tv_down_correct"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="下到位"
-        android:textSize="18sp"/>
-
-
-    <TextView
-        android:id="@+id/tv_up_correct"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="上到位"
-        android:textSize="18sp"/>
-
-    <TextView
-        android:id="@+id/tv_close_connect"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="断开连接"
-        android:textSize="18sp"/>
-
-</LinearLayout>
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+</RelativeLayout>
